--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -23,7 +23,6 @@
     <ClInclude Include="CircleType.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="EllipseType.h" />
-    <ClInclude Include="LineType.h" />
     <ClInclude Include="MoreTypes.h" />
     <ClInclude Include="PixFpDimension.h" />
     <ClInclude Include="SaveCast.h" />
@@ -39,6 +38,7 @@
     <ClCompile Include="EventInterface.ixx" />
     <ClCompile Include="Geometry.ixx" />
     <ClCompile Include="IoConstants.ixx" />
+    <ClCompile Include="LineType.ixx" />
     <ClCompile Include="MoreTypes.cpp" />
     <ClCompile Include="NamedType.ixx" />
     <ClCompile Include="Observable.ixx" />
