--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="PixelTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RectType.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="UtilityWrappers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -111,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EllipseType.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RectType.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
