--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -163,7 +163,6 @@
     <ClInclude Include="D2D_DrawContext.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="win32_aboutBox.h" />
     <ClInclude Include="win32_actionTimer.h" />
     <ClInclude Include="win32_animation.h" />
     <ClInclude Include="win32_arrowButton.h" />
@@ -206,7 +205,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="win32_aboutBox.cpp" />
+    <ClCompile Include="Win32_AboutBox.cpp" />
+    <ClCompile Include="Win32_AboutBox.ixx" />
     <ClCompile Include="win32_baseScale.cpp" />
     <ClCompile Include="win32_command.cpp" />
     <ClCompile Include="win32_baseDialog.cpp" />
