--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -585,6 +585,7 @@
     <ClCompile Include="SlowMotionDisplay.cpp" />
     <ClCompile Include="SignalDesigner.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
+    <ClCompile Include="TimeDisplay.ixx" />
     <ClCompile Include="TimeGraph.cpp" />
     <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_descriptionWindow.cpp" />
@@ -615,7 +616,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SignalDesigner.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="TimeDisplay.h" />
     <ClInclude Include="TimeGraph.h" />
     <ClInclude Include="UndoRedoMenu.h" />
     <ClInclude Include="win32_appTitle.h" />
