--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -580,6 +580,7 @@
     <ClCompile Include="NNetModelCommands.cpp" />
     <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
+    <ClCompile Include="SignalControl.ixx" />
     <ClCompile Include="SignalPreview.cpp" />
     <ClCompile Include="SignalControl.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
@@ -609,7 +610,6 @@
     <ClInclude Include="NNetModelCommands.h" />
     <ClInclude Include="NNetWrappers.h" />
     <ClInclude Include="SignalPreview.h" />
-    <ClInclude Include="SignalControl.h" />
     <ClInclude Include="SingleNobAnimation.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="SlowMotionDisplay.h" />
