--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="SignalControl.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Measurement.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_NNetWindow.h">
@@ -162,9 +165,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_monitorWindow.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Measurement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_appTitle.h">
