--- a/Toolbox/Direct2D/Direct2D.vcxproj
+++ b/Toolbox/Direct2D/Direct2D.vcxproj
@@ -163,11 +163,11 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Direct2D.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Direct2D.cpp" />
+    <ClCompile Include="Direct2D.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utilities\Utilities.vcxproj">
