--- a/Toolbox/Direct2D/Direct2D.vcxproj.filters
+++ b/Toolbox/Direct2D/Direct2D.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Direct2D.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Direct2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Direct2D.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
