--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="win32_parameterDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="win32_performanceWindow.cpp">
+    <ClCompile Include="Win32_PerformanceWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_simulationControl.cpp">
@@ -105,6 +105,9 @@
     <ClCompile Include="Win32_AppTitle.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Win32_PerformanceWindow.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_NNetWindow.h">
@@ -144,9 +147,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_parameterDlg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="win32_performanceWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_simulationControl.h">
