--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -602,7 +602,8 @@
     <ClCompile Include="win32_parameterDlg.cpp" />
     <ClCompile Include="Win32_PerformanceWindow.cpp" />
     <ClCompile Include="Win32_PerformanceWindow.ixx" />
-    <ClCompile Include="win32_simulationControl.cpp" />
+    <ClCompile Include="Win32_SimulationControl.cpp" />
+    <ClCompile Include="Win32_SimulationControl.ixx" />
     <ClCompile Include="win32_status.cpp" />
     <ClCompile Include="win32_triggerSoundDlg.cpp" />
   </ItemGroup>
@@ -632,7 +633,6 @@
     <ClInclude Include="win32_NNetWindow.h" />
     <ClInclude Include="win32_parameterDlg.h" />
     <ClInclude Include="win32_scriptHook.h" />
-    <ClInclude Include="win32_simulationControl.h" />
     <ClInclude Include="win32_slowMotionControl.h" />
     <ClInclude Include="win32_status.h" />
     <ClInclude Include="win32_triggerSoundDlg.h" />
