--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClCompile Include="Win32_SimulationControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="win32_status.cpp">
+    <ClCompile Include="Win32_Status.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SlowMotionDisplay.cpp">
@@ -111,6 +111,9 @@
     <ClCompile Include="Win32_SimulationControl.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Win32_Status.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_NNetWindow.h">
@@ -153,9 +156,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_slowMotionControl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="win32_status.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SlowMotionDisplay.h">
