--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -15,9 +15,6 @@
     <ClInclude Include="MoreTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Uniform2D.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PixelTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -105,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PixFpDimension.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Uniform2D.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
