--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -181,7 +181,6 @@
     <ClInclude Include="win32_PixelTypes.h" />
     <ClInclude Include="win32_scale.h" />
     <ClInclude Include="win32_stdDialogBox.h" />
-    <ClInclude Include="win32_textBuffer.h" />
     <ClInclude Include="win32_hiResTimer.h" />
     <ClInclude Include="win32_rootWindow.h" />
     <ClInclude Include="win32_script.h" />
@@ -223,6 +222,7 @@
     <ClCompile Include="win32_rootWindow.cpp" />
     <ClCompile Include="win32_script.cpp" />
     <ClCompile Include="win32_stopwatch.cpp" />
+    <ClCompile Include="Win32_TextBuffer.ixx" />
     <ClCompile Include="win32_textWindow.cpp" />
     <ClCompile Include="win32_thread.cpp" />
     <ClCompile Include="win32_tooltip.cpp" />
