--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="ComputeThread.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SlowMotionDisplay.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_NNetWindow.h">
@@ -156,9 +159,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_slowMotionControl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SlowMotionDisplay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_scriptHook.h">
