--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -591,6 +591,7 @@
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="TimeDisplay.ixx" />
     <ClCompile Include="TimeGraph.cpp" />
+    <ClCompile Include="UndoRedoMenu.ixx" />
     <ClCompile Include="Win32_AppTitle.ixx" />
     <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_descriptionWindow.cpp" />
@@ -621,7 +622,6 @@
     <ClInclude Include="SignalDesigner.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeGraph.h" />
-    <ClInclude Include="UndoRedoMenu.h" />
     <ClInclude Include="win32_crsrWindow.h" />
     <ClInclude Include="NNetInputOutputUI.h" />
     <ClInclude Include="win32_MainWindow.h" />
