--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -647,6 +647,9 @@
     <ProjectReference Include="..\..\Toolbox\Win32_utilities\Win32_utilities.vcxproj">
       <Project>{7c1b51ed-011d-4b73-867c-ac23f0a9e6d1}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\Commands\Commands.vcxproj">
+      <Project>{5f8877e6-8159-4cd4-84ac-53aa018885ac}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
