--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -81,9 +81,6 @@
     <ClInclude Include="DeleteSignalCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DeleteTrackCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="InsertTrackCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -225,6 +222,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AddNobsCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DeleteTrackCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
