--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -72,7 +72,6 @@
     <ClInclude Include="AddSensorSignalCmd.h" />
     <ClInclude Include="AddSigGen2MonitorCmd.h" />
     <ClInclude Include="AnalyzeCommand.h" />
-    <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="AttachSIgGen2ConnCmd.h" />
     <ClInclude Include="AttachSigGen2SelCmd.h" />
     <ClInclude Include="ClearBeepersCommand.h" />
@@ -133,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddNobsCommand.ixx" />
+    <ClCompile Include="ArrowAnimation.ixx" />
     <ClCompile Include="CommandFunctions.cpp">
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</WholeProgramOptimization>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Disabled</Optimization>
