--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -126,9 +126,6 @@
     <ClInclude Include="NNetCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ArrowAnimation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ConnAnimationCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -225,6 +222,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MoveSensorCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrowAnimation.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
