--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -108,7 +108,7 @@
       <StructMemberAlignment>Default</StructMemberAlignment>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <ConformanceMode>false</ConformanceMode>
+      <ConformanceMode>true</ConformanceMode>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
