--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -9,9 +9,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="debug.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MoreTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -105,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Uniform2D.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Debug.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
