--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DeleteBaseKnotCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Connect2PipeCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -225,6 +222,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArrowAnimation.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DeleteBaseKnotCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
