--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -184,7 +184,6 @@
     <ClInclude Include="win32_textWindow.h" />
     <ClInclude Include="win32_textWindowThread.h" />
     <ClInclude Include="win32_thread.h" />
-    <ClInclude Include="win32_tooltip.h" />
     <ClInclude Include="win32_util.h" />
     <ClInclude Include="win32_util_resource.h" />
     <ClInclude Include="win32_winManager.h" />
@@ -224,7 +223,8 @@
     <ClCompile Include="Win32_TextBuffer.ixx" />
     <ClCompile Include="win32_textWindow.cpp" />
     <ClCompile Include="win32_thread.cpp" />
-    <ClCompile Include="win32_tooltip.cpp" />
+    <ClCompile Include="Win32_Tooltip.cpp" />
+    <ClCompile Include="Win32_Tooltip.ixx" />
     <ClCompile Include="win32_util.cpp" />
     <ClCompile Include="win32_winManager.cpp" />
   </ItemGroup>
