--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -582,6 +582,7 @@
     <ClCompile Include="NNetModelCommands.cpp" />
     <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
+    <ClCompile Include="Preferences.ixx" />
     <ClCompile Include="SignalControl.ixx" />
     <ClCompile Include="SignalDesigner.ixx" />
     <ClCompile Include="SignalPreview.cpp" />
@@ -619,8 +620,6 @@
     <ClInclude Include="NNetWrappers.h" />
     <ClInclude Include="SignalPreview.h" />
     <ClInclude Include="SingleNobAnimation.h" />
-    <ClInclude Include="Preferences.h" />
-    <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeGraph.h" />
     <ClInclude Include="win32_crsrWindow.h" />
